--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "jquery": "^1.11.1",
     "ember": "1.11.1",
-    "ember-data": "1.0.0-beta.16",
+    "ember-data": "components/ember#canary",
     "ember-resolver": "~0.1.14",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
@@ -16,5 +16,8 @@
   },
   "devDependencies": {
     "jquery.isinview": "~1.0.1"
+  },
+  "resolutions": {
+    "ember-data": "canary"
   }
 }
